fix: 실시간 채팅 수정